# snarkVM

./: Cargo.toml
algorithms/: Cargo.toml
algorithms/cuda-2/: Cargo.toml  build.rs
algorithms/cuda-2/cuda/: snarkvm.cu
algorithms/cuda-2/sppark/rust/: Cargo.toml
