[package]
name = "snarkvm-algorithms-cuda-2"
version = "0.16.19"
authors = [ "Hai Nguyen <hainh @ github.com>" ]
description = "Cuda optimizations for a decentralized virtual machine"
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
portable = [ "blst/portable" ]
quiet = [ ]

[dependencies.blst]
version = "0.3.11"
features = [ ]

[dependencies.sppark]
path = "./sppark/rust"

[build-dependencies.cc]
version = "^1.0.83"

[build-dependencies.which]
version = "^4.4"
